test/compile_failure/31_float_modulo.c
// EXPECT-ERRORS: 1
// EXPECT: binary operator requires compatible arithmetic operands
int main() {
    double value = 4.0 % 2.0;
    return 0;
}
